# nlb-seatings

./: .gitignore  CNAME  README.md  a.py  environment.yml  index.html  main.py  pyproject.toml
assets/: index-B-5IhTHm.css  index-B5PWIVnI.js  index-Dc9DsgC9.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
