[project]
name = "nlb-seatings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utilities>=0.3.0",
    "fastapi[standard]>=0.115.11",
    "more-itertools>=10.6.0",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
]
